# csci717_software-construction

./: .gitignore  README.md
1assignment/: Problem1.txt  Problem2.txt  Problem3.txt
2assignment/: CMakeLists.txt  Makefile  Problem2.h  Problem3.txt  cmake_install.cmake  test.cpp
3assignment/: BankAccount.cpp  BankAccount.h  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  test.cpp
4assignment/: problem2.py  problem3.py
5assignment/: CMakeLists.txt  Item.cpp  Item.h  Makefile  Sale.cpp  Sale.h  cmake_install.cmake  test.cpp
assignment1/: Problem4.txt  Problem5.txt
assignment2/: Makefile  Problem1.cpp  Problem1.h  Problem2.cpp  Problem3.txt  cmake_install.cmake  main.cpp
